# Big4MegaMiner2025

./: .gitignore  Cargo.toml  GAME_CONTEXT_AND_GOALS.md  README.md  TODO.md  agent_r.py  intial.json  pyproject.toml  rules.txt  test_map.json
AI_Agents/: AgentTemplate.py  ExampleAgent1.py  ExampleAgent2.py  ExampleAgentRuleBased.py  HEAVY_PENALTIES_GUIDE.md  HEAVY_PENALTIES_QUICK_REF.md  IMPLEMENTATION_SUMMARY.md  MegaMinerEnv.py  QUICK_START.md  REWARD_SYSTEM_GUIDE.md  REWARD_VALIDATION.md  REWARD_VISUAL_GUIDE.md  ppo_agent.py  train_ppo.py
Visualizer/: entity.gd  entity.gd.uid  export_presets.cfg  game.tscn  game.tscn14919030068.tmp  game_manager.gd  health.gdshader.uid  human_ai_select.gd  human_ai_select.tscn  icon.svg.import  log.txt186880128094.tmp  main_menu.tscn  project.godot  ui.tscn  world.gd
Visualizer/Assets/: scroll.tres
Visualizer/Assets/Base_Skin/: Red_base.png.import  alt_grass.png.import  alt_path.png.import  base.png.import  blue_base.png.import  blue_recruit.png.import  crossbow.png.import  enemy.png.import  grass.png.import  path.png.import  red_recruit.png.import  spawner.png.import
Visualizer/Assets/HD_Skin/: Blood.png.import  Blue_base.png.import  Blue_merc.svg.import  Blue_merc_attack1.svg.import  Blue_merc_attack2 .svg.import  Blue_merc_walk.svg.import  GrassTex.png~  Red_base.png.import  alt_grass.png.import  alt_path.png.import  background.svg.import  base.png.import  base.svg.import  blue_base.png.import  blue_recruit.png.import  (+30 more)
Visualizer/Data/: intial.json
Visualizer/Scripts/: GameSettings.gd  GameSettings.gd.uid  Global_paths.gd  delete_signal.gd  delete_signal.gd.uid  map_selector.gd  map_selector.gd.uid  right_side_states.gd  right_side_states.gd.uid
Visualizer/objects/: big_blood_splatter.tscn  blueMerc.gd  bluemerc.tscn  crossbow.gd  crossbow.gd.uid  crossbow.tscn  demon.gd  demon.gd.uid  demon.tscn  entity.tscn  redmerc.gd  redmerc.tscn  underneath_tile.tscn
backend/: AIAction.py  BuildPhase.py  BuyMercenaryPhase.py  Cannon.py  Church.py  Constants.py  Crossbow.py  Demon.py  DemonSpawner.py  Entity.py  Game.py  GameState.py  House.py  Mercenary.py  Minigun.py  NameSelector.py  PlayerBase.py  ProvokeDemonsPhase.py  SpawnDemons.py  SpawnMercenaries.py  Tower.py  UpdateDemons.py  UpdateMercenaries.py  UpdateTowers.py  Utils.py  WorldUpdatePhase.py  main.py
backend/AI_Agents/: Agent1.py  ExampleAgent1.py
backend/data/: game_state_json.txt
maps/: map.json  map0.json  map1.json  map2.json  map3.json  map4.json  map6.json  map_big.json  test_map.json  test_map_tiny.json
py/: Constants.py  Crossbow.py  Demon.py  DemonSpawner.py  Entity.py  GameObjects.py  GameState.py  Mercenary.py  PlayerBase.py  Tower.py  server.py
rules/: README.md
src/: main.rs
tests/: backend_tests.py
(+50 files in other folders)
