[project]
name = "megaminer2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "absl-py==2.3.1",
    "cloudpickle==3.1.2",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "farama-notifications==0.0.4",
    "filelock==3.20.0",
    "fonttools==4.60.1",
    "fsspec==2025.10.0",
    "grpcio==1.76.0",
    "gymnasium==0.29.1",
    "jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "markdown==3.10",
    "markupsafe==3.0.3",
    "matplotlib==3.10.7",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numpy==2.3.4",
    "nvidia-cublas-cu12==12.8.4.1 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12==12.8.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12==12.8.93 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12==12.8.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cudnn-cu12==9.10.2.21 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufft-cu12==11.3.3.83 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufile-cu12==1.13.1.3 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-curand-cu12==10.3.9.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusolver-cu12==11.7.3.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparse-cu12==12.5.8.93 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparselt-cu12==0.7.1 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nccl-cu12==2.27.5 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12==12.8.93 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvshmem-cu12==3.3.20 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvtx-cu12==12.8.90 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "packaging==25.0",
    "pandas==2.3.3",
    "pettingzoo==1.24.3",
    "pillow==12.0.0",
    "protobuf==6.33.0",
    "pygame==2.5.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "sb3-contrib==2.7.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "stable-baselines3==2.7.0",
    "supersuit==3.9.2",
    "sympy==1.14.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tinyscaler==1.2.8",
    "torch==2.9.0",
    "triton==3.5.0 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "werkzeug==3.1.3",
]
